--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -1,5 +1,25 @@
 body {
     margin: 0;
-    background-color: red;
-    color: white;
+    font-family: 'Muli', sans-serif;
+    background: #8f57fd;
+  }
+  
+  * {
+    box-sizing: border-box;
+}
+
+
+::placeholder {
+  color: white;
+}
+
+@media only screen and (max-width: 600px) {
+  .main__description--title {
+    font-size: 30px;
+  }
+
+  .footer {
+    align-items: flex-start;
+    flex-direction: column;
+  }
 }
