--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -8,6 +8,24 @@ body {
     box-sizing: border-box;
 }
 
+.button {
+  background-color: rgba(255, 255, 255, 0.252);
+  border: none;
+  border-radius: 25px;
+  color: white;
+  font-family: 'Muli', sans-serif;
+  font-size: 16px;
+  height: 50px;
+  margin-bottom: 20px;
+  outline: none;
+  padding: 0px 20px;
+  width: 100%;
+  transition: all .3s;
+
+  &:hover {
+    background-color: rgba(255, 255, 255, 0.388);
+  }
+}
 
 ::placeholder {
   color: white;
